# renderengine

./: CMakeLists.txt  README.md
Skeleton/: Ant_Mesh.mtl  PostEffect.frag  mtlShader.frag  renderApp.cpp
common/: Controls.cpp  Group.cpp  MTLShader.cpp  MTLShader.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Objloader.cpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.hpp
extras/: VSWorkspaceState.json  cmake.db  launch.vs.json  slnx.sqlite
extras/RenderEngineSkeletonCode2023ForLab/FileContentIndex/: 0098eaed-3f79-4b62-bf47-5fd709bfebaf.vsidx  4b3a5bab-159c-4d85-8e02-f493a89d70fa.vsidx  89fbb11a-ed4d-46b9-9558-4169389e551b.vsidx  dea724cd-493a-49d3-af84-cbd00843cb87.vsidx
extras/RenderEngineSkeletonCode2023ForLab/v17/: .wsuo  Browse.VC.db-shm  Browse.VC.opendb
